welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: type mismatch;
 found   : Unit
 required: Boolean
if (z=0) {
     ^