welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var x=0 ; var z=0
if (z=0) {
	z=1;

for(a<-1 to 5) {avance() ;
	if(estSurBiscuit) {x=x+1}}
	if(x>2) {droite()}
	if(x<3) {gauche()}
}